# ashiato

./: AGENTS.md  CMakeLists.txt  README.md  coverage.json
.github/workflows/: ci.yml
benchmarks/: basic_operations_benchmark.cpp  index.html
benchmarks/history/: index.json
benchmarks/runs/: index.json
benchmarks/runs/20260525T034651Z-39046610afbf/: index.html  metadata.json  result.json
benchmarks/runs/20260527T214312Z-f06b03bee4e7/: index.html  metadata.json  result.json
benchmarks/runs/20260602T031842Z-3a5e52d4adfa/: index.html  metadata.json  result.json
benchmarks/runs/20260602T034408Z-37ed4d532cb6/: index.html  metadata.json  result.json
benchmarks/runs/20260606T235439Z-af1e1c8dd569/: index.html  metadata.json  result.json
benchmarks/runs/20260610T190019Z-961f78b4ad44/: index.html  metadata.json  result.json
benchmarks/runs/20260704T182453Z-a5779512ab35/: index.html  metadata.json  result.json
benchmarks/runs/20260705T034807Z-181b8bedb970/: index.html  metadata.json  result.json
benchmarks/runs/20260706T183136Z-9178b17c2c76/: index.html  metadata.json  result.json
benchmarks/runs/20260711T172251Z-b2436d989dd7/: index.html  metadata.json  result.json
benchmarks/runs/20260711T202409Z-3c9488e42869/: index.html  metadata.json  result.json
benchmarks/runs/20260711T203626Z-604d79851c52/: index.html  metadata.json  result.json
benchmarks/runs/20260712T025628Z-820c5b0ba9de/: index.html  metadata.json  result.json
include/ashiato/: ashiato.hpp  bit_buffer.hpp  debug_server.hpp
scripts/: lint.sh
scripts/ci/: build_benchmark_pages.py  run_benchmarks.py
src/: ashiato.cpp  ashiato_bit_buffer.test.cpp  ashiato_debug_server.test.cpp  ashiato_job_callbacks.test.cpp  ashiato_job_threading.test.cpp  ashiato_jobs_basic.test.cpp  ashiato_metadata.test.cpp  ashiato_registry.test.cpp  ashiato_serialization_trace.test.cpp  ashiato_snapshot.test.cpp  ashiato_storage.test.cpp  ashiato_views_iteration.test.cpp  debug_server.cpp  groups.cpp  jobs.cpp  snapshot.cpp  storage.cpp
tools/debugger/: CMakeLists.txt  debugger_app.cpp  debugger_app.hpp  debugger_app_internal.hpp  debugger_core.cpp  debugger_core.hpp  debugger_core.test.cpp  debugger_panels.cpp  debugger_refresh.cpp  debugger_widgets.cpp  main.cpp
web/debugger/src/: App.tsx  api.ts  state.test.ts  (+2 more)
(+26 files in other folders)
